@@ -1,0 +1,3 @@
+no-member:25:34:25:42:Day.__repr__:Instance of 'Day' has no 'foo' member:INFERENCE
+no-member:29:6:29:20::Instance of 'FRIDAY' has no 'foo' member:INFERENCE
+no-member:46:6:46:21::Instance of 'MILE' has no 'foo' member:INFERENCE
